# ai-care

./: README.md  pyproject.toml
.github/workfolws/: codecov.yml
docs/: user_guide.md
src/ai_care/: __init__.py  _version.py  abilities.py  ai_care.py  choice_execute.py  parse_response.py  prompt_render.py  render_prompt.py
tests/: test_abilities.py  test_ai_care.py  test_choice_execute.py  test_parse_response.py  test_render_prompt.py
