[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-care"
authors = [
  { name="Xueao Chao", email="chaoxueao@gmail.com" },
]
description = "AI-Care endows AI with the capability to speak proactively. With simple settings, AI-Care allows your AI to proactively care for you."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
keywords = ["AI", "Proactive AI", "LLM"]
dependencies = []

[project.urls]
Homepage = "https://github.com/happyapplehorse/ai-care"
Issues = "https://github.com/happyapplehorse/ai-care/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = "src"

[tool.setuptools.dynamic]
version = {attr = "ai_care.__version__"}
